Fonts and alignment fixes has been added

--- a/src/app/custom-dropdown/custom-dropdown.component.scss
+++ b/src/app/custom-dropdown/custom-dropdown.component.scss
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: column;
     width: 350px;
-    max-height: 217px;
+    max-height: 242px;
     background: transparent;
     overflow: auto;
-    border-radius: 5px;
+    border-radius: 8px;
     border: 1px solid #d0d0d0;
 }
 
@@ -45,10 +45,12 @@
     align-items: center;
     height: 36px;
     width: 350px;
-    margin-bottom: 2px;
-    border-radius: 5px;
+    margin-bottom: 5px;
+    border-radius: 8px;
     background: transparent;
     border: 1px solid #d0d0d0;
+    color: #202833;
+    cursor: pointer;
 }
 
 #select-box-text {
@@ -56,18 +58,26 @@
     width: calc(100% - 34px);
     margin-left: 10px;
     opacity: 0.7;
+    font-size: 13px;
+    font-family: Poppins, Inter, sans-serif;
 }
 
 #select-options>div {
-    padding: 6px;
+    padding: 8px;
+}
+
+#select-options>div>span {
+    font-size: 13px;
+    color: #202833;
+    font-family: Poppins, Inter, sans-serif;
 }
 
 #select-options>div:hover {
-    background-color: #e4f3f9;
+    background-color: #ecf5f6;
 }
 
 .selected-option-bg-color {
-    background-color: #d7f3e7;
+    background-color: #e5e8e7;
 }
 
 .down-arrow {
@@ -95,7 +105,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 7px;
+    width: 6px;
 }
 
 ::-webkit-scrollbar-track {
@@ -103,7 +113,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(155, 155, 155, 0.5);
+    background-color: #dddfe3;
     border-radius: 20px;
     border: transparent;
 }
